# debate_ai

./: .gitignore  README.md  plain.md  pyproject.toml
.claude/: CLAUDE.md
src/debate_ai/: __init__.py  agent.py  debate_graph.py  llm_provider.py  server.py
tests/: __init__.py  test_agent.py  test_mcp_server.py
